# lab_blackjack

./: blackjack.py  card.py  cards.csv  deck.py  game.py  pyproject.toml  view.py
